<resources>
    <string name="app_name">PetBook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_appointment">Add appointment</string>
    <string name="pet_name">Pet name</string>
    <string name="enter_the_pet_s_name">Enter the pet\'s name</string>
    <string name="clinic_name">Clinic name</string>
    <string name="enter_the_clinic_name">Enter the clinic name</string>
    <string name="procedures_performed_consultation_details">Procedures performed, consultation details</string>
    <string name="enter_the_details">Enter the details</string>
    <string-array name="appointment_types">
        <item>Consultation</item>
        <item>Vaccination</item>
        <item>Check-up</item>
        <item>Surgery</item>
        <item>Emergency</item>
    </string-array>
</resources>